# agentic-business-platform

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTEXT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SPEC.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  env-example.txt  locustfile.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  api.py  auth.py  cli.py  config.py  database.py  db.py  errors.py  events.py  middleware.py  pagination.py  responses.py  service.py  telemetry.py  tenant.py  worker.py  worker_settings.py  ws.py  ws_voice.py
app/models/: __init__.py  agent_record.py  api_key.py  audit_event.py  conversation.py  document.py  document_chunk.py  drift_report.py  event_subscription.py  feedback.py  mcp_scan.py  message.py  organization.py  prompt_template.py  semantic_cache.py  user.py  workflow.py
app/routers/: __init__.py  a2a.py  admin.py  agents.py  api_keys.py  audit.py  auth.py  billing.py  chat.py  compliance.py  costs.py  dashboard.py  eval.py  feedback.py  health.py  ingest.py  mcp.py  policies.py  prompts.py  sbom.py  tenant.py  workflows.py
app/routers/templates/: dashboard.html
core/: __init__.py
core/governance/: __init__.py  eval.py  policy.py  redteam.py  templates.py
core/hardening/: __init__.py  sbom.py
core/pipeline/: __init__.py  cache.py  chunk.py  embed.py  federated.py  ingest.py  orchestrator.py  sandbox.py  search.py
core/router/: __init__.py  intent.py  selector.py
core/security/: __init__.py  a2a_auth.py  dlp.py  guardrails.py  mcp_scanner.py  pqc.py
deploy/: prometheus.yml
deploy/grafana/dashboards/: platform.json
deploy/helm/turin-platform/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
deploy/helm/turin-platform/templates/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  pvc.yaml  sealedsecret.yaml  secret.yaml  service.yaml
deploy/prometheus/: alerts.yml
docs/: airgap-deployment-blueprint.md  enterprise-chat-architecture.md  performance-testing.md
docs/adr/: README.md
migrations/: env.py
migrations/versions/: 11bf5436858c_initial_schema.py  5bbcf3fb1054_add_mcp_scan_results_table.py  api_key_scopes.py  bbc9a703c131_create_all_tables.py  drift_reports.py  event_subscriptions.py  gdpr_soft_deletes.py  hitl_workflows.py  hybrid_search_tsv.py  legal_holds.py  llm_feedback.py  pgvector_enable.py  prompt_templates.py  rbac_roles.py  rls_enable.py  semantic_cache_add.py  siem_webhooks.py  white_label_branding.py  workflows.py
scripts/: backup-db.sh  restore-db.sh  retention-cleanup.sh  wait-for-health.sh
tests/: __init__.py  conftest.py  helpers.py  test_architecture_wiring.py  test_cli_api_integration.py  test_enterprise_api.py  test_governance_e2e.py  test_mcp_scanner_e2e.py  test_pipeline_e2e.py  test_platform_integration_e2e.py  test_sbom_e2e.py
tests/e2e/: test_integration.py
tests/governance/: test_eval.py  test_policy.py  test_redteam.py
tests/pipeline/: test_chunk.py  test_ingest.py  test_ingest_pdf.py  test_policies_api.py
tests/router/: test_agents.py  test_audit.py  test_chat.py  test_dashboard.py  test_errors.py  test_eval_api.py  test_intent.py  test_pagination.py  test_selector.py
tests/security/: test_mcp_scanner.py  test_mcp_scanner_http.py
web/: nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  declarations.d.ts  index.css  main.tsx  test-setup.ts
web/src/api/: client.ts
web/src/components/: AuthScreen.tsx  ChatArea.test.tsx  ChatArea.tsx  Dashboard.tsx  ErrorBoundary.tsx  GenerativeUI.tsx  ProtectedRoute.tsx  Sidebar.tsx  VoiceAgent.tsx
web/src/i18n/: config.ts
web/src/i18n/locales/: en.json  fr.json
web/src/lib/: edgeLLM.ts
web/src/store/: useChatStore.ts  useTenantStore.ts  useWebsocketStore.ts
