[project]
name = "turin-platform"
version = "0.1.0"
description = "TurinTech Agentic Business Platform — enterprise sovereign AI infrastructure"
authors = [{name = "iknowkungfubar", email = "hello@turintech.solutions"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "ecdsa>=0.19.1",
    "agent-control-plane",
    "prometheus-client>=0.25.0",
    "redis[cluster]>=5.0",
    "arq>=0.26",
    "tenacity>=8.0",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
turin-platform = "app.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "app"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "S101", "ANN", "COM", "INP", "TD", "EM", "ERA", "PLR2004"]

# Pre-existing suppressions — fix incrementally
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLC0415", "TRY003", "PT011", "RUF012", "PTH123", "PERF401",
             "SLF001", "S310", "RUF043", "A002", "E501", "ARG002"]
"core/*" = ["PERF401", "TRY003", "RUF012", "FBT001", "PTH123", "S310",
            "PTH202", "PLC0415", "SIM102"]

[tool.uv.workspace]
members = [
    "acp",
]

[tool.uv.sources]
agent-control-plane = { workspace = true }
